# email-triage-openenv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
email-triage-openenv/: README.md
email_triage_openenv/: __init__.py  client.py  graders.py  models.py
email_triage_openenv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
email_triage_openenv/server/: __init__.py  app.py  environment.py  graders.py
email_triage_openenv/server/data/: emails.json  ground_truth.json
server/: app.py
